<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/New_Password_Tv_Code"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_42"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/dimen_34"
        android:textColor="@color/blackblue"
        android:fontFamily="@font/cairo"
        android:gravity="center"
        android:text="@string/new_password_tv_code" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/New_Password_Et_Code"
        android:layout_below="@+id/New_Password_Tv_Code"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_42"
        android:layout_marginTop="@dimen/dimen_24"
        android:background="@drawable/rectangleshape"
        android:fontFamily="@font/cairo"
        android:hint="البريد الالكتروني"
        android:padding="@dimen/dimen_4"
        android:layout_marginEnd="@dimen/dimen_24"
        android:layout_marginStart="@dimen/dimen_24"
        android:inputType="textEmailAddress"
        />
    <TextView
        android:id="@+id/New_Password_Tv_Password"
        android:layout_below="@id/New_Password_Et_Code"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_42"
        android:layout_marginTop="@dimen/dimen_24"
        android:fontFamily="@font/cairo"
        android:textColor="@color/blackblue"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/new_password_tv_password" />
    <android.support.design.widget.TextInputEditText
        android:id="@+id/New_Password_Et_Password"
        android:layout_below="@+id/New_Password_Tv_Password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_42"
        android:layout_marginTop="@dimen/dimen_24"
        android:background="@drawable/rectangleshape"
        android:fontFamily="@font/cairo"
        android:hint="@string/new_password_et_password"
        android:padding="@dimen/dimen_4"
        android:layout_marginEnd="@dimen/dimen_24"
        android:layout_marginStart="@dimen/dimen_24"
        android:inputType="textEmailAddress"
        />
    <android.support.design.widget.TextInputEditText
        android:id="@+id/New_Password_Et_RePassword"
        android:layout_below="@+id/New_Password_Et_Password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_42"
        android:layout_marginTop="@dimen/dimen_24"
        android:background="@drawable/rectangleshape"
        android:fontFamily="@font/cairo"
        android:hint="@string/new_password_et_rePassword"
        android:padding="@dimen/dimen_4"
        android:layout_marginEnd="@dimen/dimen_24"
        android:layout_marginStart="@dimen/dimen_24"
        android:inputType="textEmailAddress"
        />
    <Button
        android:id="@+id/New_Password_Btn_send"
        android:layout_below="@+id/New_Password_Et_RePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_24"
        android:layout_marginTop="@dimen/dimen_34"
        android:layout_marginEnd="@dimen/dimen_24"
        android:layout_marginBottom="@dimen/dimen_24"
        android:background="@drawable/button_custom_green"
        android:fontFamily="@font/cairo"
        android:textColor="@color/white"
        android:text="@string/forge_password_btn_send"
        android:textStyle="bold" />


</RelativeLayout>