<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl">

    <TextView
        android:id="@+id/Forget_Password_Tv"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_42"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/dimen_34"
        android:drawableStart="@drawable/ic_person_black"
        android:fontFamily="@font/cairo"
        android:gravity="center"
        android:text="@string/forget_password_tv"
        android:textColor="@color/blackblue" />

    <TextView
        android:id="@+id/Forget_Password_Tv_Email"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_42"
        android:layout_below="@id/Forget_Password_Tv"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/dimen_24"
        android:fontFamily="@font/cairo"
        android:gravity="center"
        android:text="@string/forget_password_tv_email"
        android:textColor="@color/blackblue" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/Forget_Password_Et_Email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_42"
        android:layout_below="@+id/Forget_Password_Tv_Email"
        android:layout_marginStart="@dimen/dimen_24"
        android:layout_marginTop="@dimen/dimen_24"
        android:layout_marginEnd="@dimen/dimen_24"
        android:background="@drawable/rectangleshape"
        android:fontFamily="@font/cairo"
        android:hint="البريد الالكتروني"
        android:inputType="textEmailAddress"
        android:padding="@dimen/dimen_4"
        android:textAlignment="viewStart" />

    <Button
        android:id="@+id/Client_Register_Btn_Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Forget_Password_Et_Email"
        android:layout_marginStart="@dimen/dimen_24"
        android:layout_marginTop="@dimen/dimen_34"
        android:layout_marginEnd="@dimen/dimen_24"
        android:layout_marginBottom="@dimen/dimen_24"
        android:background="@drawable/button_custom_green"
        android:fontFamily="@font/cairo"
        android:text="@string/forge_password_btn_send"
        android:textColor="@color/white"
        android:textStyle="bold" />


</RelativeLayout>