<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ui.fragments.loginCycle.LoginFragment">


    <TextView
        android:id="@+id/Login_Tv"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_42"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/dimen_34"
        android:textColor="@color/blackblue"
        android:textSize="@dimen/album_dp_20"
        android:drawableStart="@drawable/ic_person_black"
        android:fontFamily="@font/cairo"
        android:gravity="center"
        android:text=" تفضل بتسجيل الدخول" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/Login_Til_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Login_Tv"
        android:layout_marginStart="@dimen/dimen_24"
        android:layout_marginTop="@dimen/dimen_24"
        android:layout_marginEnd="@dimen/dimen_24"
        android:layoutDirection="rtl">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/Login_Et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangleshape"
            android:hint="اسم المستخدم"
            android:inputType="textEmailAddress"
            android:textAlignment="viewStart" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/Login_Til_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Login_Til_Name"
        android:layout_marginStart="@dimen/dimen_24"
        android:layout_marginTop="@dimen/dimen_24"
        android:layout_marginEnd="@dimen/dimen_24"
        android:layoutDirection="rtl">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/Login_Et_passwrd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="اسم المستخدم"
            android:background="@drawable/rectangleshape"
            android:inputType="textPassword"
            android:textAlignment="viewStart" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/Login_login_Btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50"
        android:layout_below="@id/Login_Til_Password"
        android:layout_marginStart="@dimen/dimen_24"
        android:layout_marginTop="@dimen/dimen_50"
        android:layout_marginEnd="@dimen/dimen_24"
        android:textColor="@color/white"
        android:textSize="@dimen/album_dp_20"
        android:background="@drawable/button_custom_green"
        android:text="@string/login_login_btn" />

    <TextView
        android:id="@+id/Login_Forget_Password_Et"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_42"
        android:layout_below="@+id/Login_login_Btn"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/dimen_24"
        android:fontFamily="@font/cairo"
        android:gravity="center"
        android:text="@string/login_Forget_password_tv"
        android:textColor="@color/blackblue"
        android:textSize="@dimen/dimen_24" />

    <Button
        android:id="@+id/Login_Register_Btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50"
        android:layout_below="@id/Login_Forget_Password_Et"
        android:layout_marginStart="@dimen/dimen_24"
        android:layout_marginTop="@dimen/dimen_24"
        android:layout_marginEnd="@dimen/dimen_24"
        android:textColor="@color/white"
        android:textSize="@dimen/album_dp_20"
        android:background="@drawable/button_custom_yellow"
        android:text="@string/Login_register_Btn" />

</RelativeLayout>